Add required field validation to forms and fix notifications

--- a/static/main.css
+++ b/static/main.css
@@ -91,6 +91,12 @@ a:hover, .add-challenge-button:hover {
 
 .errorNotification {
     color: red;
+    font-size: large;
+}
+
+.successNotification {
+    color: black;
+    font-size: large;
 }
 
 .true {
