--- a/templates/custom_habit.html
+++ b/templates/custom_habit.html
@@ -10,7 +10,7 @@
     {% endif %}
     <form action="/custom_habit" method="POST">
         <p class="custom-habit-text">What habit do you want to track?</p>
-        <input type="text" class="input" name="custom_habit" placeholder="Habit name">
+        <input type="text" class="input" name="custom_habit" placeholder="Habit name" required>
         <br>
         <br>
         <p class="custom-habit-text">Do you want to track this habit with a numerical value<br>or simply mark it as done/undone?</p>
