--- a/templates/login.html
+++ b/templates/login.html
@@ -15,6 +15,7 @@
             {% if notification %}
                 <p id="notification" class="notification">{{ message }}</p>
             {% endif %}
+            <h1>Habit Tracker</h1>
             <h2>Log in</h2>
             <form action="/login" method="POST">
                 <p>Username:<br>
@@ -25,6 +26,8 @@
             </form>
             </br>
             Don't have an account? <a href="/register">Register here</a>
+            <br>
+            <br>
         </div>
         {% endblock %}
     </main>
